SERVER-59609 Do not shadow function parameter in tenantID handler